// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dont react or update preview when data is changed during formstore is loading 1`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Dont react or update preview when data is changed during preview-store is starting 1`] = `
<div
  class="container auto"
>
  <div
    class="loaderContainer"
  >
    <div
      class="spinner"
      style="width: 40px; height: 40px;"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`React and update preview in external window when data is changed 1`] = `null`;

exports[`React and update preview when data is changed 1`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Render button to start preview 1`] = `
<button>
  Start
</button>
`;

exports[`Render correct preview 1`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-focus"
                  class="su-focus icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Render correct preview with target groups 1`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-user"
                  class="su-user icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Render nothing if separate window is opened and rerender if it is closed 1`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Render nothing if separate window is opened and rerender if it is closed 2`] = `
<div
  class="container auto"
>
  <div
    class="previewContainer"
  >
    <div
      class="iframeContainer"
    >
      <iframe
        class="iframe"
        src="/render"
      />
    </div>
  </div>
  <nav
    class="toolbar dark"
  >
    <div
      class="controls dark grow"
    >
      <button
        class="button dark"
      >
        <span
          aria-label="su-arrow-right"
          class="su-arrow-right icon"
        />
      </button>
      <div
        class="itemsContainer"
      >
        <ul
          class="items dark"
        >
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-expand"
                  class="su-expand icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.auto
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-calendar"
                  class="su-calendar icon"
                />
                <span
                  class="label"
                >
                  12/16/2020, 2:06:22 PM
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-webspace"
                  class="su-webspace icon"
                />
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-sync"
                class="su-sync icon"
              />
              <span
                class="label"
              >
                sulu_preview.reload
              </span>
            </button>
          </li>
          <li>
            <div
              class="popover"
            >
              <button
                class="button dark"
              >
                <span
                  aria-label="su-share"
                  class="su-share icon"
                />
                <span
                  class="label"
                >
                  sulu_preview.preview_link
                </span>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down dropdownIcon"
                />
              </button>
            </div>
          </li>
          <li>
            <button
              class="button dark"
            >
              <span
                aria-label="su-link"
                class="su-link icon"
              />
              <span
                class="label"
              >
                sulu_preview.open_in_window
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
